tests/fixtures/negative/compose/ComposeStatefulDefaultParameter.kt
package test
import androidx.compose.runtime.Composable

@Composable
fun Counter(state: CounterState = rememberCounterState()) { }
